kubernetes.yaml updated more cpu's

--- a/kubernetes-deployment.yaml
+++ b/kubernetes-deployment.yaml
@@ -1,9 +1,13 @@
+You can add CPU (and memory) resource requests and limits within the containers section of your kubernetes-deployment.yaml.
+
+Here's exactly where you can add it, along with an example:
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: circle-ci-project
 spec:
-  replicas: 2 # You are requesting 2 replicas of your pod
+  replicas: 2
   selector:
     matchLabels:
       app: circle-ci-project
@@ -17,13 +21,13 @@ spec:
           image: us-central1-docker.pkg.dev/sigma-scheduler-461007-u2/circle-ci-project/circle-ci-project:latest
           ports:
             - containerPort: 5000
-          resources:
-            requests:
-              cpu: "200m" # Request 0.2 CPU core for your pod
-              memory: "256Mi" # Request 256 MiB of memory
-            limits:
-              cpu: "500m" # Limit to 0.5 CPU core
-              memory: "512Mi" # Limit to 512 MiB of memory
+          resources:             # <--- ADD THIS SECTION
+            requests:            # <--- Requests are the minimum guaranteed resources
+              cpu: "200m"        # Request 0.2 of a CPU core (200 milli-cores)
+              memory: "256Mi"    # Request 256 MiB of memory
+            limits:              # <--- Limits are the maximum resources your container can use
+              cpu: "500m"        # Limit to 0.5 of a CPU core (500 milli-cores)
+              memory: "512Mi"    # Limit to 512 MiB of memory
 
 ---
 apiVersion: v1
